<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DA7EC07E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/interestrate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/period_text" />

    <TextView
        android:id="@+id/interest_text"
        android:layout_width="105dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/interest"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/repay_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carloan_text" />

    <EditText
        android:id="@+id/period"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rate"
        app:layout_constraintStart_toEndOf="@+id/period_text"
        app:layout_constraintTop_toBottomOf="@+id/downpay" />

    <TextView
        android:id="@+id/downpay_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/downpayment"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/period_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text" />

    <EditText
        android:id="@+id/rate"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/check_button"
        app:layout_constraintStart_toEndOf="@+id/rate_text"
        app:layout_constraintTop_toBottomOf="@+id/period" />

    <EditText
        android:id="@+id/price"
        android:layout_width="164dp"
        android:layout_height="57dp"
        android:layout_marginStart="100dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/downpay"
        app:layout_constraintStart_toEndOf="@+id/price_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:id="@+id/result_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/repay_text"
        app:layout_constraintTop_toBottomOf="@+id/result_Int"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_Int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/result_pay"
        app:layout_constraintStart_toEndOf="@+id/interest_text"
        app:layout_constraintTop_toBottomOf="@+id/result_loan"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="316dp"
        android:background="#3D2D08"
        android:onClick="clickHandlerFunction"
        android:text="@string/button_text"
        android:textColor="#EEFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/carprice"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/downpay_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:id="@+id/carloan_text"
        android:layout_width="105dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/carloan"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/interest_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/result_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_button" />

    <TextView
        android:id="@+id/period_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/loanperiod"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rate_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downpay_text" />

    <EditText
        android:id="@+id/downpay"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/period"
        app:layout_constraintStart_toEndOf="@+id/downpay_text"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/result_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/result_Int"
        app:layout_constraintStart_toEndOf="@+id/carloan_text"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/repay_text"
        android:layout_width="188dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/repayment"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_text" />

</androidx.constraintlayout.widget.ConstraintLayout>